# LabProgrammazione

./: AbstractSubject.h  CMakeLists.txt  Item.cpp  Item.h  List.cpp  List.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ItemTest.cpp  ListTest.cpp  ObTestUser.cpp  UserTest.cpp  runAllTests.cpp
